--- a/src/main.scss
+++ b/src/main.scss
@@ -6,3 +6,4 @@
 @import "./sass/pages/home";
 @import "./sass/abstracts/functions";
 @import "./sass/components/button";
+@import "./sass/components/title";
