--- a/src/sass/abstracts/_mixins.scss
+++ b/src/sass/abstracts/_mixins.scss
@@ -1,27 +1,26 @@
 @mixin absCenter {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  }
-  
-  @mixin liste{
-    list-style: none;
-    padding: 0;
-    margin: 0;
-  }
-  @mixin absolute{
-    content: "";
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-  }
-  
-  
-  // MEDIA QUERY MANAGER
-  /*
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+@mixin liste {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+@mixin absolute {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+// MEDIA QUERY MANAGER
+/*
       0-600px = phone
   
       600-900px = tablet portrait
@@ -33,12 +32,12 @@
       1800+ = big desktop
   
   */
-  @mixin respond-phone {
-    @media (max-width: 600px) {
-      @content;
-    }
+@mixin respond-phone {
+  @media (max-width: 600px) {
+    @content;
   }
-  /*
+}
+/*
   $breakpoint argyement choices:
   - phone
   - tab-port
@@ -46,30 +45,38 @@
   - big-desktop
   - 1em = 16px
   */
-  @mixin respond($breakpoint) {
-    @if $breakpoint == phone {
-      @media (max-width: 37.5em) {
-        @content; // 37.5 em = 600px
-      }
-    }
-    @if $breakpoint == tab-port {
-      @media (max-width: 56.25em) {
-        @content;
-      }
-    }
-    @if $breakpoint == tab-land {
-      @media (max-width: 75em) {
-        @content;
-      }
-    }
-    @if $breakpoint == big-desktop {
-      @media (min-width: 112.5em) {
-        @content;
-      }
-    }
-    @if $breakpoint == desktop {
-      @media (min-width: 1200px) and (max-width: 1800px) {
-        @content;
-      }
+@mixin respond($breakpoint) {
+  @if $breakpoint == phone {
+    @media (max-width: 37.5em) {
+      @content; // 37.5 em = 600px
     }
   }
+  @if $breakpoint == tab-port {
+    @media (max-width: 56.25em) {
+      @content;
+    }
+  }
+  @if $breakpoint == tab-land {
+    @media (max-width: 75em) {
+      @content;
+    }
+  }
+  @if $breakpoint == big-desktop {
+    @media (min-width: 112.5em) {
+      @content;
+    }
+  }
+  @if $breakpoint == desktop {
+    @media (min-width: 1200px) and (max-width: 1800px) {
+      @content;
+    }
+  }
+}
+// @mixin title {
+//   display: flex;
+//   justify-content: center;
+//   flex-direction: column;
+//   align-items: center;
+//   gap: 5px;
+//   text-align: center;
+// }
