--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -3,6 +3,7 @@
     outline: none;
     border: none;
     color:$white-color;
+    display: inline-block;
     font-size: 16px;
     padding: 8px;
     border-radius: 8px;
