--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -1,22 +1,23 @@
 .navigation {
-    padding: 0 80px;
-    background-color: rgb(250, 250, 250);
-    background-image: 
-        linear-gradient(to right, #ddd 1px, transparent 1px),
-        linear-gradient(to bottom, #ddd 1px, transparent 1px);
-    background-size: 110px 110px; /* Taille de chaque cellule de la grille */
-    text-align: center;
-    position: relative;
-    height: 95vh;
+  padding: 0 80px;
+  @include respond(tab-port) {
+    padding: 0 40px;
+    width: 100%;
+    height: 100%;
+  }
+  background-color: rgb(250, 250, 250);
+  background-image: linear-gradient(to right, #ddd 1px, transparent 1px),
+    linear-gradient(to bottom, #ddd 1px, transparent 1px);
+  background-size: 110px 110px; /* Taille de chaque cellule de la grille */
+  text-align: center;
+  position: relative;
+  height: 95vh;
+
   &__header {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 15px 0;
-
-
-
-
     &--logo {
       width: 100px;
     }
@@ -27,41 +28,113 @@
       font-weight: 500;
       text-transform: uppercase;
       gap: 15px;
-      a{
+      @include respond(tab-port) {
+        display: none;
+      }
+      a {
         text-decoration: none;
         color: $main-color;
       }
     }
   }
-  &__wrapper{
+  &__right {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 15px;
+  }
+
+  &__icon {
+    display: none;
+    cursor: pointer;
+    z-index: 600;
+    @include respond(tab-port) {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 20px;
+      // position: absolute;
+      // right: 20px;
+    }
+  }
+  &__responsive {
+    display: none;
+    opacity: 1;
+    transition: all 0.5s ease;
+    transform: translateX(-150%);
+    z-index: 900;
+    &--active {
+      transform: translateX(0);
+    }
+    @include respond(tab-port) {
+      display: block;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 50%;
+      height: 100%;
+      background-color: white;
+      padding: 15px 20px;
+
+      // position: absolute;
+      .navigation {
+        &__wrapper {
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+          margin-top: 10px;
+        }
+      }
+      ul {
+        margin-top: 10px;
+        display: flex;
+        flex-direction: column;
+        gap: 15px;
+      }
+      li {
+        gap: 20px;
+      }
+    }
+  }
+  &__wrapper {
     position: relative;
     width: 50%;
     text-align: center;
     z-index: 200;
+
+    @include respond(tab-port) {
+      width: 100%;
+    }
   }
-  &__body{
+  &__index {
+    display: flex;
+    justify-content: space-between;
+  }
+  &__body {
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 40px 0;
-    &--title{
-        font-size: 45px;
-        font-weight: 600;
-        line-height: .9;
-        color: $main-color;
+    &--title {
+      font-size: 45px;
 
+      font-weight: 600;
+      line-height: 0.9;
+      color: $main-color;
+      @include respond(tab-port){
+        font-size: 35px;
+      }
     }
-    &--description{
-        font-size: 16px;
-        font-weight: 500;
-        color: $main-color;
-        margin-top: 20px;
-        margin-bottom: 20px;
-        z-index: 200;
-
+    &--description {
+      font-size: 14px;
+      font-weight: 500;
+      color: $main-color;
+      margin-top: 20px;
+      margin-bottom: 20px;
+      z-index: 200;
     }
   }
-  &__image{
+  &__image {
     width: 90%;
     height: 50%;
     position: absolute;
@@ -69,5 +142,249 @@
     bottom: 0;
     left: 50%; /* Place l'image au milieu de l'écran */
     transform: translateX(-50%); /* Centre l'image horizontalement */
+
+    @include respond(tab-port) {
+      display: none;
+    }
+  }
+}
+.features {
+  padding: 80px 80px;
+  @include respond(tab-port) {
+    padding: 40px 40px;
+  }
+  &__wrapper {
+    margin-top: 40px;
+    display: flex;
+    justify-content: space-between;
+    @include respond(tab-port){
+      flex-direction: column;
+      align-items: center;
+    }
+    gap: 15px;
+    &--card {
+      background-color: #f8f8f8;
+      padding: 20px 25px;
+      border-radius: 15px;
+      transition: 0.3s all ease-in-out;
+      cursor: pointer;
+      &:hover {
+        background-color: $main-color;
+        .features__wrapper--image {
+          background-color: rgb(97, 103, 115);
+        }
+        h3,
+        p {
+          color: white;
+        }
+        p {
+          font-weight: 400;
+          &.more {
+            color: white;
+          }
+        }
+      }
+    }
+    &--image {
+      background-color: $main-color;
+      padding: 15px;
+      border-radius: 10px;
+    }
+    h3 {
+      margin-top: 16px;
+      color: $main-color;
+      font-weight: 500;
+    }
+    p {
+      margin-top: 16px;
+      color: #717171;
+      font-size: 14px;
+      &.more {
+        color: $main-color;
+        font-weight: 500;
+      }
+    }
+  }
+}
+.finance {
+  padding: 80px 80px;
+  @include respond(tab-port) {
+    padding: 40px 40px;
+  }
+  display: flex;
+  justify-content: space-between;
+  background-color: $main-color;
+  background-image: linear-gradient(
+      to right,
+      rgba(221, 221, 221, 0.1) 1px,
+      transparent 1px
+    ),
+    linear-gradient(to bottom, rgba(221, 221, 221, 0.1) 1px, transparent 1px);
+
+  background-size: 110px 110px; /* Taille de chaque cellule de la grille */
+  gap: 30px;
+  color: white;
+  //   align-items: center;
+  &__wrapper {
+    position: relative;
+    &:nth-child(1) {
+      flex-basis: 40%;
+      @include respond(tab-port){
+        display: none;
+      }
+    }
+    &:nth-child(2) {
+      flex-basis: 50%;
+      @include respond(tab-port){
+        flex-basis: 100%;
+      }
+    }
+    &--image {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      position: absolute;
+      background-position: center;
+      background-size: cover;
+      border-radius: 40px;
+      //   width: 50%;
+    }
+    &--box {
+      position: absolute;
+      background-color: white;
+      z-index: 500;
+      top: -20px;
+      left: -20px;
+      // width: 40%;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      gap: 20px;
+      padding: 0 10px;
+      border-radius: 10px;
+      border-bottom: 5px solid $main-color;
+      h4 {
+        color: $main-color;
+        font-weight: 500;
+        
+      }
+      p {
+        color: rgb(167, 167, 167);
+        font-size: 12px;
+      }
+      img {
+        width: 50px;
+        height: 50px;
+        object-fit: cover;
+        border-radius: 50%;
+      }
+    }
+    &--payment {
+      padding: 15px;
+      border-radius: 10px;
+      position: absolute;
+      bottom: -30px;
+      right: -30px;
+      border-top: 3px solid $main-color;
+      border-left: 3px solid $main-color;
+      background-color: white;
+      h4 {
+        color: $main-color;
+        font-weight: 500;
+      }
+      p {
+        color: rgb(167, 167, 167);
+        font-size: 12px;
+      }
+    }
+    &--info {
+      margin-top: 15px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      gap: 15px;
+      img {
+        background-color: $main-color;
+        padding: 8px;
+        border-radius: 5px;
+      }
+    }
+    &--icon {
+      position: absolute;
+      top: -14px;
+      left: -20px;
+      background-color: rgba(97, 103, 115, 0.7);
+      padding: 15px;
+      border-radius: 15px;
+    }
+    &--content {
+      p {
+        &:nth-child(1) {
+          color: $main-color;
+        }
+      }
+    }
+    &--timeline {
+      position: relative;
+      // background-color: red;
+      margin-top: 20px;
+    }
+    .center-line {
+      position: absolute;
+      height: 100%;
+      width: 2px;
+      background: #fff;
+      //   left: 50%;
+      top: 0px;
+      //   transform: translateX(-50%);
+    }
+
+    h1 {
+      font-size: 40px;
+      @include respond(tab-port){
+        font-size: 30px;
+      }
+      font-weight: 700;
+      line-height: 1;
+    }
+    &--description {
+      font-size: 16px;
+      margin-top: 20px;
+    }
+  }
+  &__row {
+    position: relative;
+    margin-top: 20px;
+    &--details {
+      margin-left: 40px;
+    }
+    &--title {
+      font-size: 18px;
+      font-weight: 500;
+      font-family: "Poppins";
+    }
+    &--description {
+      font-size: 14px;
+      font-family: "Poppins";
+      margin-top: 10px;
+      color: rgb(167, 167, 167);
+    }
+  }
+}
+.how {
+  padding: 80px 80px;
+}
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: -1;
+  opacity: 0;
+  &--active {
+    opacity: 1;
+    z-index: 500;
   }
 }
